src/test/deca/context/invalid/assign_undeclared.deca

// Description :
// Utilisation d'une variable non déclarée
//
// Resultats :
// Erreur contextuelle
// variable 'x' non déclarée
//

{
    x = 5;
}